fixed apply target with error update revision

--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -16,6 +16,8 @@ spec:
         config-server: "true"
     spec:
       serviceAccountName: config-server
+      strategy:
+        type: Recreate
       containers:
       - name: config-server
         image: input.context[0].data.configServerImage
