updated configsetserver location

--- a/artifacts/inv.sdcio.dev_targets.yaml
+++ b/artifacts/inv.sdcio.dev_targets.yaml
@@ -24,6 +24,9 @@ spec:
     - jsonPath: .status.conditions[?(@.type=='DSReady')].status
       name: DATASTORE
       type: string
+    - jsonPath: .status.conditions[?(@.type=='ConfigReady')].status
+      name: CONFIG
+      type: string
     - jsonPath: .spec.provider
       name: PROVIDER
       type: string
