sync profile: gnmi encoding srl related comment

--- a/example/sync-profiles/target-sync-profile-gnmi.yaml
+++ b/example/sync-profiles/target-sync-profile-gnmi.yaml
@@ -13,7 +13,5 @@ spec:
     paths:
     - /
     mode: onChange
-    encoding: config
-    
-
-  
+    encoding: config     # SRLinux specific encoding (id: 45)
+ 
