--- a/artifacts/configmap-input-vars.yaml
+++ b/artifacts/configmap-input-vars.yaml
@@ -8,5 +8,5 @@ metadata:
     kform.dev/resource-id: context ## this serves as a way to add default and manage the merge 
     kform.dev/default: "true"
 data: 
-  dataServerImage: "europe-docker.pkg.dev/srlinux/eu.gcr.io/config-server:latest"
-  configServerImage: "europe-docker.pkg.dev/srlinux/eu.gcr.io/data-server:latest"
+  configServerImage: ghcr.io/sdcio/config-server:latest
+  dataServerImage: ghcr.io/sdcio/data-server:latest
