update label with prefix

--- a/artifacts/cert-manager_certificate-api-service.yaml
+++ b/artifacts/cert-manager_certificate-api-service.yaml
@@ -7,7 +7,7 @@ spec:
   secretName: config-server-cert
   secretTemplate:
     labels:
-      config-server: "true"
+      sdcio.dev/config-server: "true"
   dnsNames:
     - config-server.network-system.svc
   issuerRef:
