--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,6 +17,8 @@ dockers:
     image_templates:
       - "ghcr.io/iptecharch/{{ .ProjectName }}:latest"
       - "ghcr.io/iptecharch/{{ .ProjectName }}:v{{ .Version }}"
+      - "ghcr.io/sdcio/{{ .ProjectName }}:latest"
+      - "ghcr.io/sdcio/{{ .ProjectName }}:v{{ .Version }}"
       - "registry.kmrd.dev/iptecharch/{{ .ProjectName }}:latest"
       - "registry.kmrd.dev/iptecharch/{{ .ProjectName }}:v{{ .Version }}"
       - "registry.k8s.hans.io/iptecharch/{{ .ProjectName }}:latest"
@@ -53,6 +55,6 @@ changelog:
       - "^test:"
 release:
   prerelease: auto
-  draft: true
+  draft: false
   replace_existing_draft: true
   disable: false
