--- a/example/config/bad_targetref_config.yaml
+++ b/example/config/bad_targetref_config.yaml
@@ -2,6 +2,7 @@
 # These files have 2 purposes
 # 1. they serve as unit tests
 # 2. they can be used as discovery rules examples
+####### HEADER END #######
 apiVersion: config.sdcio.dev/v1alpha1
 kind: Config
 metadata:
