--- a/example/config/config.yaml
+++ b/example/config/config.yaml
@@ -1,3 +1,8 @@
+# DO NOT UPDATE THESE FILES OR CHANGE THE NAME, RATHER CREATE NEW ONCE
+# These files have 2 purposes
+# 1. they serve as unit tests
+# 2. they can be used as discovery rules examples
+####### HEADER END #######
 apiVersion: config.sdcio.dev/v1alpha1
 kind: Config
 metadata:
