--- a/.github/workflows/dev-nightlies.yml
+++ b/.github/workflows/dev-nightlies.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   dev-release:
-    runs-on: iptecharch-action-runners
+    runs-on: sdcio-action-runners
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -41,10 +41,10 @@ jobs:
           username: iptecharch-builder
           password: ${{ secrets.IPTECHARCH_GITHUB_PAT }}
 
-      - name: Login to Hans' Private k8s Container Registry
+      - name: Login to private k8s Container Registry
         uses: docker/login-action@v3
         with:
-          registry: registry.k8s.hans.io
+          registry: registry.k8s.sdcio.dev
           username: iptecharch-builder
           password: ${{ secrets.K8S_REGISTRY_HANS }}
 
