--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build-and-release:
-    runs-on: iptecharch-action-runners
+    runs-on: sdcio-action-runners
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout
@@ -46,10 +46,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to Hans' Private k8s Container Registry
+      - name: Login to private k8s Container Registry
         uses: docker/login-action@v3
         with:
-          registry: registry.k8s.hans.io
+          registry: registry.k8s.sdcio.dev
           username: iptecharch-builder
           password: ${{ secrets.K8S_REGISTRY_HANS }}
 
