added data-server service

--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -16,6 +16,7 @@ spec:
     metadata:
       labels:
         sdcio.dev/config-server: "true"
+        sdcio.dev/data-server: "true"
     spec:
       securityContext:
         runAsUser: 10000
