updated config-server with new approach

--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -69,6 +69,8 @@ spec:
           value: "true"
         - name: ENABLE_CONFIG
           value: "true"
+        - name: ENABLE_CONFIGSET
+          value: "true"
         volumeMounts:
         - name: apiserver-certs
           mountPath: /apiserver.local.config/certificates
