--- a/artifacts/rbac-cluster-role-controller-permissions.yaml
+++ b/artifacts/rbac-cluster-role-controller-permissions.yaml
@@ -15,6 +15,9 @@ rules:
 - apiGroups: ["config.sdcio.dev"]
   resources: ["configs", "configs/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["config.sdcio.dev"]
+  resources: ["configsets", "configsets/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["targets", "targets/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
