--- a/artifacts/inv.sdcio.dev_discoveryrules.yaml
+++ b/artifacts/inv.sdcio.dev_discoveryrules.yaml
@@ -99,11 +99,6 @@ spec:
                 - connectionProfiles
                 - credentials
                 type: object
-              domainName:
-                description: DomainName defines the domain name of the cluster, used
-                  by pod or svc discovery to identify the domain name in the l8s cluster
-                  where the pod or services reside.
-                type: string
               period:
                 description: Period defines the wait period between discovery rule
                   runs
@@ -170,6 +165,11 @@ spec:
                   - prefix
                   type: object
                 type: array
+              serviceDomain:
+                description: ServiceDomain defines the service domain of the cluster,
+                  used by svc discovery to identify the domain name in the k8s cluster
+                  where the service reside.
+                type: string
               serviceSelector:
                 description: ServiceSelector defines the service selector for which
                   this discovery rule applies
