added event permissions

--- a/artifacts/rbac-cluster-role-controller-permissions.yaml
+++ b/artifacts/rbac-cluster-role-controller-permissions.yaml
@@ -6,6 +6,9 @@ rules:
 - apiGroups: [""]
   resources: ["namespaces", "secrets", "services", "pods"]
   verbs: ["get", "watch", "list"]
+- apiGroups: [""]
+  resources: ["events"]
+  verbs: ["create", "patch"]
 - apiGroups: ["admissionregistration.k8s.io"]
   resources: ["mutatingwebhookconfigurations", "validatingwebhookconfigurations"]
   verbs: ["get", "watch", "list"]
