added unmanaged config

--- a/artifacts/rbac-cluster-role-controller-permissions.yaml
+++ b/artifacts/rbac-cluster-role-controller-permissions.yaml
@@ -21,6 +21,9 @@ rules:
 - apiGroups: ["config.sdcio.dev"]
   resources: ["configsets", "configsets/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["config.sdcio.dev"]
+  resources: ["unmanagedconfigs", "unmanagedconfigs/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["targets", "targets/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
