--- a/.goreleaser.nightlies.yml
+++ b/.goreleaser.nightlies.yml
@@ -18,7 +18,7 @@ dockers:
       - "registry.k8s.sdcio.dev/sdcio/config-server:v0.0.0-{{ .ShortCommit }}"
       - "registry.k8s.sdcio.dev/sdcio/config-server:v0.0.0-dev-latest"
       - "registry.kmrd.dev/sdcio/config-server:v0.0.0-{{ .ShortCommit }}"
-      - "registry.kmrd.dev/iptecharch/config-server:v0.0.0-dev-latest"
+      - "registry.kmrd.dev/sdcio/config-server:v0.0.0-dev-latest"
     dockerfile: goreleaser.dockerfile
     skip_push: false
     build_flag_templates:
