--- a/artifacts/secret.yaml
+++ b/artifacts/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/tls
 metadata:
-  name: config-server
+  name: config-server-cert
   namespace: network-system
   labels:
     sdcio.dev/config-server: "true"
