--- a/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
@@ -69,6 +69,7 @@ spec:
                       - onChange
                       - sample
                       - once
+                      - get
                       type: string
                     name:
                       type: string
