added configset + manifest updates

--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         args:
         - "--tls-cert-file=/apiserver.local.config/certificates/tls.crt"
         - "--tls-private-key-file=/apiserver.local.config/certificates/tls.key"
-        - "--feature-gates=APIPriorityAndFairness=false"
+        #- "--feature-gates=APIPriorityAndFairness=false"
         - "--audit-log-path=-"
         - "--audit-log-maxage=0"
         - "--audit-log-maxbackup=0"
