--- a/.goreleaser.nightlies.yml
+++ b/.goreleaser.nightlies.yml
@@ -1,3 +1,4 @@
+version: 2
 project_name: config-server
 builds:
   - id: config-server
@@ -17,8 +18,8 @@ dockers:
     image_templates:
       - "registry.k8s.sdcio.dev/sdcio/config-server:v0.0.0-{{ .ShortCommit }}"
       - "registry.k8s.sdcio.dev/sdcio/config-server:v0.0.0-dev-latest"
-      - "registry.kmrd.dev/sdcio/config-server:v0.0.0-{{ .ShortCommit }}"
-      - "registry.kmrd.dev/sdcio/config-server:v0.0.0-dev-latest"
+      #- "registry.kmrd.dev/sdcio/config-server:v0.0.0-{{ .ShortCommit }}"
+      #- "registry.kmrd.dev/sdcio/config-server:v0.0.0-dev-latest"
     dockerfile: goreleaser.dockerfile
     skip_push: false
     build_flag_templates:
