--- a/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetconnectionprofiles.yaml
@@ -57,13 +57,13 @@ spec:
               encoding:
                 default: ASCII
                 enum:
-                - unknown
+                - UNKNOWN
                 - JSON
                 - JSON_IETF
-                - bytes
-                - protobuf
+                - BYTES
+                - PROTO
                 - ASCII
-                - config
+                - CONFIG
                 type: string
                 x-kubernetes-validations:
                 - message: encoding is immutable
