added additional validation for the synProfile

--- a/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
+++ b/artifacts/inv.sdcio.dev_targetsyncprofiles.yaml
@@ -62,6 +62,7 @@ spec:
                       type: string
                     interval:
                       default: 60s
+                      format: duration
                       type: string
                     mode:
                       enum:
