updated profiles for the docs

--- a/example/sync-profiles/target-sync-profile-gnmi.yaml
+++ b/example/sync-profiles/target-sync-profile-gnmi.yaml
@@ -17,6 +17,7 @@ spec:
     protocol: gnmi
     paths:
     - /
-    mode: onChange
-    encoding: CONFIG     # SRLinux specific encoding (id: 45)
+    mode: get
+    encoding: JSON_IETF
+    interval: 10s
  
