--- a/example/sync-profiles/target-sync-profile-gnmi.yaml
+++ b/example/sync-profiles/target-sync-profile-gnmi.yaml
@@ -6,7 +6,7 @@
 apiVersion: inv.sdcio.dev/v1alpha1
 kind: TargetSyncProfile
 metadata:
-  name: gnmi-onchange
+  name: gnmi-get
   namespace: default
 spec:
   buffer: 0
