--- a/artifacts/service-api-server.yaml
+++ b/artifacts/service-api-server.yaml
@@ -4,11 +4,11 @@ metadata:
   name: config-server
   namespace: network-system
   labels:
-    sdcio.dev/config-server: "true"
+    app.kubernetes.io/name: config-server
 spec:
   ports:
   - name: api-service
     port: 6443
     targetPort: api-service
   selector:
-    sdcio.dev/config-server: "true"
+    app.kubernetes.io/name: config-server
