--- a/artifacts/service-metrics.yaml
+++ b/artifacts/service-metrics.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-server
+  name: config-server-metrics
   namespace: network-system
   labels:
     app.kubernetes.io/name: config-server
 spec:
   ports:
-  - port: 56000
+  - port: 8443
     protocol: TCP
-    targetPort: 56000
+    targetPort: 8443
   selector:
-    sdcio.dev/data-server: "true"
+    app.kubernetes.io/name: config-server
