--- a/artifacts/monitor/monitor.yaml
+++ b/artifacts/monitor/monitor.yaml
@@ -8,8 +8,9 @@ metadata:
   namespace: network-system
 spec:
   endpoints:
-    - path: /metrics
-      port: https # Ensure this is the name of the port that exposes HTTPS metrics
+    - interval: 30s
+      path: /metrics
+      port: metrics # Ensure this is the name of the port that exposes HTTPS metrics
       scheme: https
       bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       tlsConfig:
