--- a/artifacts/service-metrics.yaml
+++ b/artifacts/service-metrics.yaml
@@ -7,7 +7,8 @@ metadata:
     app.kubernetes.io/name: config-server
 spec:
   ports:
-  - port: 8443
+  - name: metrics
+    port: 8443
     protocol: TCP
     targetPort: 8443
   selector:
