updated crds for server side apply

--- a/crds/config.sdcio.dev_configs.yaml
+++ b/crds/config.sdcio.dev_configs.yaml
@@ -377,6 +377,9 @@ spec:
                   - type
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
               deviations:
                 description: Deviations identify the configuration deviation based
                   on the last applied config
