--- a/crds/inv.sdcio.dev_targets.yaml
+++ b/crds/inv.sdcio.dev_targets.yaml
@@ -150,6 +150,9 @@ spec:
                   - type
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
               discoveryInfo:
                 description: Discovery info defines the information retrieved during
                   discovery
