--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -60,6 +60,8 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: status.hostIP
+        - name: ENABLE_SUBSCRIPTION
+          value: "true"
         - name: ENABLE_TARGET
           value: "true"
         - name: ENABLE_TARGETDATASTORE
