--- a/artifacts/rbac-cluster-role-controller.yaml
+++ b/artifacts/rbac-cluster-role-controller.yaml
@@ -36,6 +36,9 @@ rules:
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["schemas", "schemas/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["subscriptions", "subscriptions/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["coordination.k8s.io"]
   resources: ["leases"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
