--- a/crds/inv.sdcio.dev_subscriptions.yaml
+++ b/crds/inv.sdcio.dev_subscriptions.yaml
@@ -100,6 +100,12 @@ spec:
                       - 60s
                       format: duration
                       type: string
+                    labels:
+                      additionalProperties:
+                        type: string
+                      description: Labels can be defined as user defined data to provide
+                        extra context
+                      type: object
                     mode:
                       default: sample
                       enum:
