--- a/example/subscription/subscription.yaml
+++ b/example/subscription/subscription.yaml
@@ -26,3 +26,10 @@ spec:
     - /system/lldp/interface[name=*]/statistics
     
  
+ ##
+ /interface/statistics
+ - srl:  
+    - /interface/statistics 
+    - transformer: 
+ - arista: /interface/statistics
+ /system/lldp/interface/statistics
