--- a/crds/inv.sdcio.dev_targetconnectionprofiles.yaml
+++ b/crds/inv.sdcio.dev_targetconnectionprofiles.yaml
@@ -101,6 +101,7 @@ spec:
               port:
                 default: 57400
                 description: Port defines the port on which the scan runs
+                format: int32
                 type: integer
                 x-kubernetes-validations:
                 - message: port is immutable
