Changed the data-service targetPort to a named port and added a named containerPort to the data-server container for easier debugging with Telepresence.

--- a/artifacts/deployment.yaml
+++ b/artifacts/deployment.yaml
@@ -91,6 +91,9 @@ spec:
         - /app/data-server
         args:
         - "--config=/config/data-server.yaml"
+        ports:
+        - name: data-service
+          containerPort: 56000
         volumeMounts:
         - name: data-server-config
           mountPath: /config
