update docs schema, conn profiles, sync profiles and discovery rules

--- a/example/discovery-rule/discovery_pod.yaml
+++ b/example/discovery-rule/discovery_pod.yaml
@@ -19,9 +19,9 @@ spec:
     connectionProfiles:
     - gnmi-skipverify
   targetConnectionProfiles:
-  - credentials: srl.nokia.sdcio.dev 
+  - credentials: srl.nokia.sdcio.dev
     connectionProfile: gnmi-skipverify
-    syncProfile: gnmi-onchange
+    syncProfile: gnmi-get 
   targetTemplate:
     labels:
       sdcio.dev/region: us-east
