--- a/example/sync-profiles/target-sync-profile-netconf.yaml
+++ b/example/sync-profiles/target-sync-profile-netconf.yaml
@@ -15,7 +15,8 @@ spec:
   sync:
   - name: config
     protocol: netconf
+    port: 830
     paths:
     - /
-    mode: sample
-    interval: 10s
+    mode: get
+    interval: 30s
