favor PROTO encoding instead of CONFIG

--- a/example/sync-profiles/target-sync-profile-gnmi-once-and-onchange.yaml
+++ b/example/sync-profiles/target-sync-profile-gnmi-once-and-onchange.yaml
@@ -18,7 +18,7 @@ spec:
     paths:
     - /
     mode: onChange
-    encoding: CONFIG
+    encoding: PROTO
   - name: all_once
     protocol: gnmi
     paths:
