updated profiles and logic

--- a/artifacts/inv.sdcio.dev_targets.yaml
+++ b/artifacts/inv.sdcio.dev_targets.yaml
@@ -27,6 +27,9 @@ spec:
     - jsonPath: .spec.provider
       name: PROVIDER
       type: string
+    - jsonPath: .status.discoveryInfo.version
+      name: VERSION
+      type: string
     - jsonPath: .spec.address
       name: ADDRESS
       type: string
