--- a/artifacts/rbac-cluster-role-controller.yaml
+++ b/artifacts/rbac-cluster-role-controller.yaml
@@ -34,6 +34,9 @@ rules:
   resources: ["discoveryrules", "discoveryrules/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["inv.sdcio.dev"]
+  resources: ["discoveryvendorprofiles"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["inv.sdcio.dev"]
   resources: ["schemas", "schemas/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["inv.sdcio.dev"]
