--- a/artifacts/rbac-cluster-role-controller.yaml
+++ b/artifacts/rbac-cluster-role-controller.yaml
@@ -39,6 +39,12 @@ rules:
 - apiGroups: ["inv.sdcio.dev"]
   resources: ["subscriptions", "subscriptions/status"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["workspaces", "workspaces/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
+- apiGroups: ["inv.sdcio.dev"]
+  resources: ["rollouts", "rollouts/status"]
+  verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
 - apiGroups: ["coordination.k8s.io"]
   resources: ["leases"]
   verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
