update workspace controller

--- a/artifacts/inv.sdcio.dev_rollouts.yaml
+++ b/artifacts/inv.sdcio.dev_rollouts.yaml
@@ -24,7 +24,7 @@ spec:
     - jsonPath: .spec.repoURL
       name: URL
       type: string
-    - jsonPath: .ref
+    - jsonPath: .spec.ref
       name: REF
       type: string
     name: v1alpha1
